<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/solution_tv"
        android:text="@string/textfielt_dflt_0"
        android:textSize="32sp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_above="@id/result_tv"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/Buttons_Layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"

        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="64sp" />


    <LinearLayout
        android:layout_alignParentBottom="true"
        android:background="#A5A5A5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        android:id="@+id/Buttons_Layout">

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/button_c"
                android:layout_margin="12sp"
                android:backgroundTint="#FF5722"
                android:id="@+id/button_c"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/open_bracket"
                android:backgroundTint="#514D4D"
                android:layout_margin="12sp"
                android:id="@+id/open_bracket"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/close_bracket"
                android:backgroundTint="#514D4D"
                android:layout_margin="12sp"
                android:id="@+id/close_bracket"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/divide_symbol"
                android:layout_margin="12sp"
                android:backgroundTint="#FF9800"
                android:id="@+id/divide_symbol"/>


        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/button_7"
                android:layout_margin="12sp"
                android:id="@+id/button_7"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/button_8"
                android:layout_margin="12sp"
                android:id="@+id/button_8"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/_9"
                android:layout_margin="12sp"
                android:id="@+id/button_9"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/button_multiply"
                android:layout_margin="12sp"
                android:backgroundTint="#FF9800"
                android:id="@+id/button_multiply"/>


        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/button_4"
                android:layout_margin="12sp"
                android:id="@+id/button_4"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/_5"
                android:layout_margin="12sp"
                android:id="@+id/button_5"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/_6"
                android:layout_margin="12sp"
                android:id="@+id/button_6"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/button_subtraction"
                android:layout_margin="12sp"
                android:backgroundTint="#FF9800"
                android:id="@+id/button_subtraction"/>


        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/_1"
                android:layout_margin="12sp"
                android:id="@+id/button_1"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/_2"
                android:layout_margin="12sp"
                android:id="@+id/button_2"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/_3"
                android:layout_margin="12sp"
                android:id="@+id/button_3"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/button_addition"
                android:layout_margin="12sp"
                android:backgroundTint="#FF9800"
                android:id="@+id/button_addition"/>


        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/button_ac"
                android:layout_margin="12sp"
                android:backgroundTint="#FF5722"
                android:id="@+id/button_ac"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/_0"
                android:layout_margin="12sp"
                android:id="@+id/button_0"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/button_dot"
                android:layout_margin="12sp"
                android:id="@+id/button_dot"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:text="@string/button_equsl"
                android:layout_margin="12sp"
                android:backgroundTint="#FF9800"
                android:id="@+id/button_equal"/>


        </LinearLayout>


    </LinearLayout>



</RelativeLayout>